syntax = "proto3";

package github.com.Artenso.calendar.api.calendar;

option go_package = "github.com/Artenso/calendar/pkg/calendar";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

service Calendar {
    rpc AddEvent (AddEventRequest) returns (AddEventResponse);
    rpc GetEventByID (GetEventByIDRequest) returns (GetEventByIDResponse);
    rpc RemoveEvent (RemoveEventRequest) returns (google.protobuf.Empty);
    rpc GetFromToEvents (GetFromToEventsRequest) returns (GetFromToEventsResponse);
    rpc GetAllEvents (google.protobuf.Empty) returns (GetAllEventsResponse);
    rpc EditEvent (EditEventRequest) returns (EditEventResponse);
}

message Event{
    int64 id = 1;
    google.protobuf.Timestamp startDate = 2;
    google.protobuf.Timestamp endDate = 3;
    string description = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
}

message AddEventRequest {
    google.protobuf.Timestamp startDate = 1 [(validate.rules).timestamp.required = true];
    google.protobuf.Timestamp endDate = 2 [(validate.rules).timestamp.required = true];
    string description = 3 [(validate.rules).string.min_len = 5]; 
}

message AddEventResponse {
    Event event = 1;
}

message GetEventByIDRequest {
    int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetEventByIDResponse{
    Event event = 1;
}

message RemoveEventRequest {
    int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetFromToEventsRequest {
    google.protobuf.Timestamp fromDate = 1 [(validate.rules).timestamp.required = true];
    google.protobuf.Timestamp toDate = 2 [(validate.rules).timestamp.required = true];
}

message GetFromToEventsResponse {
    repeated Event eventsList = 1;
}

message GetAllEventsResponse{
    repeated Event eventsList = 1;
}

message EditEventRequest{
    int64 id = 1 [(validate.rules).int64.gt = 0];
    google.protobuf.Timestamp startDate = 2;
    google.protobuf.Timestamp endDate = 3;
    google.protobuf.StringValue description = 4;
}

message EditEventResponse{
    Event newEvent = 1;
}